--- a/Lawdingo_G4/src/main/resources/application.properties
+++ b/Lawdingo_G4/src/main/resources/application.properties
@@ -4,5 +4,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost/dbLawdingo
 spring.datasource.username=postgres
-spring.datasource.password=ludovico1postgresql
+spring.datasource.password=root
 server.port=8080
