--- a/Lawdingo_G4/src/main/resources/application.properties
+++ b/Lawdingo_G4/src/main/resources/application.properties
@@ -4,5 +4,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost/dbLawdingo
 spring.datasource.username=postgres
-spring.datasource.password=root
-server.port=8080
+#spring.datasource.password=root
+spring.datasource.password=angie
+
+#server.port=8080
+
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+jwt.secret=4t7w!z%C*F-JaNdRgUkXn2r5u8x/A?D(G+KbPeShVmYq3s6v9y$B&E)H@McQfTjW
