added controller entity

--- a/Lawdingo_G4/src/main/resources/application.properties
+++ b/Lawdingo_G4/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost/dbLawdingo
 spring.datasource.username=postgres
 #spring.datasource.password=root
-spring.datasource.password=1234
+spring.datasource.password=root
 
 server.port=8080
 
