--- a/Lawdingo_G4/src/main/resources/application.properties
+++ b/Lawdingo_G4/src/main/resources/application.properties
@@ -5,9 +5,11 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost/dbLawdingo
 spring.datasource.username=postgres
 #spring.datasource.password=root
-spring.datasource.password=root
+spring.datasource.password=140202
 
-server.port=8080
+#server.port=8080
 
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 jwt.secret=4t7w!z%C*F-JaNdRgUkXn2r5u8x/A?D(G+KbPeShVmYq3s6v9y$B&E)H@McQfTjW
+
+
