--- a/Lawdingo_G4/src/main/resources/application.properties
+++ b/Lawdingo_G4/src/main/resources/application.properties
@@ -3,9 +3,10 @@ spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost/dbLawdingo
+#spring.datasource.url=jdbc:postgresql://localhost/Lawdingo
 spring.datasource.username=postgres
-#spring.datasource.password=root
 spring.datasource.password=root
+#spring.datasource.password=angie
 
 server.port=8080
 
