--- a/Lawdingo_G4/src/main/resources/application.properties
+++ b/Lawdingo_G4/src/main/resources/application.properties
@@ -2,10 +2,10 @@ spring.jpa.database=postgresql
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost/Lawdingov2
+spring.datasource.url=jdbc:postgresql://localhost/dbLawdingo
 spring.datasource.username=postgres
 #spring.datasource.password=root
-spring.datasource.password=Ed01072003
+spring.datasource.password=ludovico1postgresql
 
 #server.port=8080
 
