--- a/lawdingo_g4/src/main/resources/application.properties
+++ b/lawdingo_g4/src/main/resources/application.properties
@@ -1,12 +1,11 @@
 spring.jpa.database=postgresql
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://dpg-ck72kifq54js73cdg8fg-a.ohio-postgres.render.com/lawdingodb
 spring.datasource.username=userpostgres
 spring.datasource.password=KsyD1llSjjWjmG3td9MJlTeWUDLgAopY
-
-#server.port=8080
+server.port=8080
 
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 jwt.secret=4t7w!z%C*F-JaNdRgUkXn2r5u8x/A?D(G+KbPeShVmYq3s6v9y$B&E)H@McQfTjW
