--- a/Lawdingo_G4/pom.xml
+++ b/Lawdingo_G4/pom.xml
@@ -9,11 +9,11 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>pe.edu.upc.aaw</groupId>
-    <artifactId>Lawdingo_G4</artifactId>
+    <artifactId>lawdingo_g4</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>war</packaging>
-    <name>Lawdingo_G4</name>
-    <description>Lawdingo_G4</description>
+    <name>lawdingo_g4</name>
+    <description>lawdingo_g4</description>
     <properties>
         <java.version>17</java.version>
     </properties>
