--- a/Lawdingo_G4/src/main/resources/application.properties
+++ b/Lawdingo_G4/src/main/resources/application.properties
@@ -1,11 +1,10 @@
 spring.jpa.database=postgresql
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost/dbLawdingo
-spring.datasource.username=postgres
-#spring.datasource.password=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:postgresql://dpg-ck72kifq54js73cdg8fg-a.ohio-postgres.render.com/lawdingodb
+spring.datasource.username=userpostgres
+spring.datasource.password=KsyD1llSjjWjmG3td9MJlTeWUDLgAopY
 
 #server.port=8080
 
