cambios (intento) 5 WP

--- a/Lawdingo_G4/Dockerfile
+++ b/Lawdingo_G4/Dockerfile
@@ -3,6 +3,6 @@ COPY .. .
 RUN mvn clean package -DskipTests
 
 FROM amazoncorretto:17
-COPY --from=build target/lawdingo_g4-0.0.1-SNAPSHOT.war lawdingo_g4.war
+COPY --from=build target/lawdingo_g4-0.0.1-SNAPSHOT.war lawdingog4.war
 EXPOSE 8080
-ENTRYPOINT ["java","-jar","lawdingo_g4.war"]
+ENTRYPOINT ["java","-jar","lawdingog4.war"]
