--- a/Lawdingo_G4/Dockerfile
+++ b/Lawdingo_G4/Dockerfile
@@ -2,7 +2,7 @@ FROM maven:3.9.4-amazoncorretto-17 AS build
 COPY .. .
 RUN mvn clean package -DskipTests
 
-FROM amazoncorretto:17
+FROM amazoncorretto:17.0.8-alpine
 COPY --from=build target/lawdingo_g4-0.0.1-SNAPSHOT.war lawdingog4.war
 EXPOSE 80
 ENTRYPOINT ["java","-jar","lawdingog4.war"]
