--- a/Lawdingo_G4/Dockerfile
+++ b/Lawdingo_G4/Dockerfile
@@ -1,5 +1,5 @@
-FROM maven:3.9.4-eclipse-temurin-17 AS build
-COPY .. .
+FROM maven:3.9.2-eclipse-temurin-17 AS build
+COPY . .
 RUN mvn clean package -DskipTests
 
 FROM openjdk:17.0.1-jdk-slim
