--- a/Lawdingo_G4/Dockerfile
+++ b/Lawdingo_G4/Dockerfile
@@ -1,8 +1,8 @@
-FROM maven:3.9.2-eclipse-temurin-17 AS build
+FROM maven:3.9.4-eclipse-temurin-17 AS build
 COPY . .
 RUN mvn clean package -DskipTests
 
 FROM openjdk:17.0.1-jdk-slim
-COPY --from=build target/lawdingo_g4-0.0.1-SNAPSHOT.war lawdingog4.war
-EXPOSE 63342
-ENTRYPOINT ["java","-jar","lawdingog4.war"]
+COPY --from=build target/lawdingo_g4-0.0.1-SNAPSHOT.war lawdingo.war
+EXPOSE 8080
+ENTRYPOINT ["java","-jar","lawdingo.war"]
