--- a/Lawdingo_G4/src/main/resources/application.properties
+++ b/Lawdingo_G4/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.database=postgresql
+spring.jpa.database=POSTGRESQL
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.postgresql.Driver
