--- a/Lawdingo_G4/Dockerfile
+++ b/Lawdingo_G4/Dockerfile
@@ -2,7 +2,7 @@ FROM maven:3.9.4-eclipse-temurin-17 AS build
 COPY . .
 RUN mvn clean package -DskipTests
 
-FROM openjdk:17.0.1-jdk-slim
+FROM eclipse-temurin:17-jre
 COPY --from=build target/lawdingo_g4-0.0.1-SNAPSHOT.war lawdingo.war
-EXPOSE 8080
+EXPOSE 63342
 ENTRYPOINT ["java","-jar","lawdingo.war"]
