--- a/Lawdingo_G4/pom.xml
+++ b/Lawdingo_G4/pom.xml
@@ -90,7 +90,7 @@
                         <image>
                             <name>${project.name}:${project.version}</name>
                             <build>
-                                <from>openjdk:17</from>
+                                <from>eclipse-temurin:17</from>
                                 <assembly>
                                     <name>build</name>
                                     <descriptionRef>artifact</descriptionRef>
